html + body overflow fixed

--- a/public/styles.css
+++ b/public/styles.css
@@ -8,9 +8,12 @@
    -ms-overflow-style: none; /* IE and Edge */
    scrollbar-width: none; 
 }
+html, body{ 
+  min-height: 100vh;
+  overflow: auto;
+}
 html{
   font-size: 15px;
-  min-height: 100vh;
   background-image: linear-gradient(to top, #c4c5c7 0%, #dcdddf 52%, #ebebeb 100%);
 }
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -20,9 +23,6 @@ body::-webkit-scrollbar {
 body{
   text-align: center;
   min-width: 250px;
-  min-height: 100%;
-  /* margin: 0 70px; */
-  
 }
 header {
   margin-top: 0.9375rem;
